[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/EnemyMovement.gd" type="Script" id=1]
[ext_resource path="res://Scripts/FindTarget.gd" type="Script" id=2]

[sub_resource type="BoxShape" id=1]

[sub_resource type="CubeMesh" id=2]

[sub_resource type="Shader" id=3]
code = "shader_type spatial;
render_mode blend_mix,depth_draw_opaque,cull_back,diffuse_burley,specular_schlick_ggx;
uniform vec4 albedo : hint_color;
uniform sampler2D texture_albedo : hint_albedo;
uniform float specular;
uniform float metallic;
uniform float roughness : hint_range(0,1);
uniform float point_size : hint_range(0,128);
uniform vec3 uv1_scale;
uniform vec3 uv1_offset;
uniform vec3 uv2_scale;
uniform vec3 uv2_offset;


void vertex() {
	UV=UV*uv1_scale.xy+uv1_offset.xy;
}




void fragment() {
	vec2 base_uv = UV;
	vec4 albedo_tex = texture(texture_albedo,base_uv);
	ALBEDO = albedo.rgb * albedo_tex.rgb;
	METALLIC = metallic;
	ROUGHNESS = roughness;
	SPECULAR = specular;
}
"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/albedo = Color( 1, 0, 0, 1 )
shader_param/specular = 0.5
shader_param/metallic = 5.0
shader_param/roughness = 1.0
shader_param/point_size = 1.0
shader_param/uv1_scale = Vector3( 1, 1, 1 )
shader_param/uv1_offset = Vector3( 0, 0, 0 )
shader_param/uv2_scale = Vector3( 1, 1, 1 )
shader_param/uv2_offset = Vector3( 0, 0, 0 )

[sub_resource type="CubeMesh" id=5]

[node name="Enemy" type="KinematicBody"]
collision_layer = 15
collision_mask = 3
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 2 )
material/0 = SubResource( 4 )

[node name="RayCast" type="RayCast" parent="."]
transform = Transform( 4.04137, 0, 0, 0, 3.8095, 0, 0, 0, 1.02117, 0, 0, -1.61179 )
enabled = true
cast_to = Vector3( 0, 0, -10 )
script = ExtResource( 2 )

[node name="Eyesiguess" type="MeshInstance" parent="."]
transform = Transform( 1.07271, 0, 0, 0, 0.132874, 0, 0, 0, 0.700378, 0, 0.527919, -0.336588 )
mesh = SubResource( 5 )
material/0 = null

[node name="CameraA" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="CameraA"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.67214, 10.6587 )
far = 8192.0
[connection signal="mouse_entered" from="." to="." method="_on_Enemy_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Enemy_mouse_exited"]
